src/test/ui/specialization/specialization-feature-gate-default.stderr
error[E0658]: specialization is unstable
  --> $DIR/specialization-feature-gate-default.rs:10:5
   |
LL |     default fn foo(&self) {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #31844 <https://github.com/dust-lang/dust/issues/31844> for more information
   = help: add `#![feature(specialization)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `dustc --explain E0658`.
